Amelioration : creation des API full request, test de tous les endpoints, génération de la documentation
